--- a/css/common.css
+++ b/css/common.css
@@ -50,7 +50,7 @@
 	font-family: 'NotoSansKR-Bold';
 	src: url(../font/Noto_Sans_KR/NotoSansKR-Bold.otf);
 }
-/* //++++++++++ Font ++++++++++ */
+/* //++++++++++ Font System ++++++++++ */
 
 
 * {margin: 0; padding: 0; box-sizing: border-box;}
