--- a/css/ui.css
+++ b/css/ui.css
@@ -424,6 +424,14 @@ body {
 	background-repeat: no-repeat;
   /* background-blend-mode: multiply; */
 }
+.moveLight::after {
+	content: "";
+	position:absolute; width:100%; height:100%;
+	background: #000;
+	z-index:400;
+	background-blend-mode: overlay;
+	opacity:0.3;
+}
 .moveParticle {
 	z-index:100;
 	position:fixed; width:120%; height:100vh; top:0%; left:-10%; 
